# ace-chess

./: Cargo.toml  README.md  \
src/: error.rs  event.rs  main.rs  message.rs  prelude.rs  styles.rs
src/common/: board.rs  castle_rights.rs  color.rs  file.rs  mod.rs  move.rs  piece.rs  rank.rs  square.rs
src/gui/: button.rs  config.rs  mod.rs  styles.rs  theme.rs
src/gui/button/: mod.rs  on_click_handlers.rs
src/logic/: mod.rs  treenode.rs  writer.rs
src/logic/movetree/: mod.rs  pgn.rs  treenode.rs
src/logic/movetree/pgn/: errors.rs  lexer.rs  mod.rs  parser.rs  parsers.rs
src/views/: modal.rs
