[package]
name = "ace-chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossbeam-channel = "0.5.8"
ggez = "0.7.0"
indextree = "4.6.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
serde = "1.0.190"
serde_indextree = "0.2.0"
serde_json = "1.0.107"

[profile.release]
debug = true

